; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_pmap.c_pmap_copy_part_page.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_pmap.c_pmap_copy_part_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pmap_copy_part_page(i32 %0, i64 %1, i32 %2, i64 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i64 @ptoa(i32 %11)
  %13 = load i64, i64* %7, align 8
  %14 = add nsw i64 %12, %13
  %15 = trunc i64 %14 to i32
  %16 = load i32, i32* %8, align 4
  %17 = call i64 @ptoa(i32 %16)
  %18 = load i64, i64* %9, align 8
  %19 = add nsw i64 %17, %18
  %20 = trunc i64 %19 to i32
  %21 = load i32, i32* %10, align 4
  %22 = call i32 @bcopy_phys(i32 %15, i32 %20, i32 %21)
  ret void
}

declare dso_local i32 @bcopy_phys(i32, i32, i32) #1

declare dso_local i64 @ptoa(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
